toogle instead if just jumping 10px. Fix bugs. Add readme. Some style fixes. adding comments.

--- a/Template/style.css
+++ b/Template/style.css
@@ -35,6 +35,7 @@ body {
   font-size: 20px;
   color: black;
   background: white;
+  opacity: 0.7;
   padding: 6px 10px;
   border-radius: 8px;
 }
